<resources>
    <string name="app_name">MedoCare</string>
    <string name="greeting">Welcome to MedoCare!</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">TODO</string>
    <string name="signup">signup</string>
    <string name="register_for_account">Register for account</string>
    <string name="services">Services</string>
    <string name="search_by_specilization">Search By Specilization</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="remidy">Remidy</string>
    <string name="heading">heading</string>
    <string name="subheading">subheading</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="hospital_name">hospital name</string>
    <string name="textview">TextView</string>
    <string name="select_date">Select Date</string>
    <string name="quick_consult">Quick Consult</string>
    <string name="explain_your_problem">Explain your problem</string>
    <string name="consult_a_doctor">Consult a Doctor</string>
    <string name="checkout_latest_info">Checkout Latest Info</string>
    <string name="world_health_info">World Health Info</string>
    <string name="logout">logout</string>
    <string name="title_activity_hospital_location">Map</string>
    <string name="view_in_map">View in map</string>
</resources>
